--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -4,19 +4,49 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #ccc;
+  background-color: #ABBCFF;
 }
 #content {
   position: absolute;
   width: 800px;
   height: 500px;
-  left: 50%;
+  left: calc(50% - 100px);
   top: 50%;
   transform: translate(-50%, -50%);
-  border: 2px solid lightblue;
   background-color: white;
 }
 #canvas {
   width: 100%;
   height: 100%;
+  position: absolute;
+  box-shadow: 3px 3px 5px grey;
+}
+#loginCover {
+  position: absolute;
+  background-color: #ABBCFF;
+}
+#loginDiv {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+#loginDiv * {
+  padding: 8px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+#onlineUsers {
+  position: absolute;
+  width: 200px;
+  right: 0;
+  list-style-type: none;
+  box-shadow: -3px 3px 5px grey;
+  background-color: #ABE6FF;
+}
+#onlineUsers li {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 2px dashed #ABBCFF;
 }
