--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -50,6 +50,7 @@ body {
   box-shadow: -3px 3px 5px grey;
   background-color: #ABE6FF;
   transition-duration: 0.7s;
+  overflow: auto;
 }
 #onlineUsers li {
   padding: 10px;
