--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -20,12 +20,12 @@ body {
   transition-duration: 0.7s;
   background-color: white;
   overflow: hidden;
+  box-shadow: -3px 3px 5px grey;
 }
 #canvas {
   width: 100%;
   height: 100%;
   position: absolute;
-  box-shadow: -3px 3px 5px grey;
 }
 #loginCover {
   position: absolute;
@@ -81,4 +81,11 @@ body {
   border: 2px solid black;
   position: absolute;
   border-style: dashed;
+}
+
+#circleHelper {
+  border: 2px solid black;
+  position: absolute;
+  border-style: dashed;
+  border-radius: 50%;
 }
